# labprog

./: README.md  file.txt  lista1.c  notas.txt
calc/: README.md  build.xml
calc/src/calc/: Application.java  Calculator.java
lab1/: prog.c  prog1.c  prog3.c
polycalc/: README.md
polycalc/src/polycalc/: Application.java  Calculator.java  Polynomial.java
prevf/: addq.sh
prevf/q1/: CMakeLists.txt  README.txt  cell.h
prevf/q1/gtests/: tests.cpp
prevf/q2/: CMakeLists.txt  README.txt  conta.cpp  conta.h
prevf/q2/gtests/: tests.cpp
prevf/q3/: CMakeLists.txt  README.txt  empregados.h
prevf/q3/gtests/: tests.cpp
prevf/q3/skel/: README.txt
prevf/q4/: CMakeLists.txt  README.txt  elevador.cpp  elevador.h
prevf/q4/gtests/: tests.cpp
prevf/q5/: CMakeLists.txt  README.txt  condicionador.h  main.cpp
prevf/q5/gtests/: tests.cpp
prevf/q6/: CMakeLists.txt  README.txt  carro.h  main.cpp
prevf/q6/gtests/: tests.cpp
tictactoe/: .gitignore  build.xml
tictactoe/src/tictactoe/: Application.java  TicTacToe.java
trab1/: .gitignore  build.xml
trab1/src/calc/: Application.java  Calculator.java
trab1/src/polycalc/: Application.java  (+1 more)
trab1_cpp/: CMakeLists.txt  Makefile  README.txt  catalog.cc  catalog.h  catalog_unittest.cc  main.cc  movie.cc  movie.h  movie_unittest.cc
trab2/: build.xml
trab3/: README.md  build.xml
trab5/: .gitignore  pom.xml
trab5/relatorio/: .gitignore  Makefile  relatorio.tex
trab7/: form.html
trab8/: index.html  style.css
trabn/: pom.xml
vf2012/q2/: README.txt  viete.h
vf2012/skel/: CMakeLists.txt  README.txt
(+18 files in other folders)
